--- a/main.html
+++ b/main.html
@@ -7,6 +7,60 @@
 </head>
 
 <body>
+	<form>
+		<label for="Name">Name:</label>
+		<input type="text" placeholder = "Name" id = "name" required>
+         <br><br>
+		
+		<label for="Email">Email:</label>
+		<input type="email" placeholder = "Email" id = "email" required>
+		<br><br>
+
+		
+		 <input type="radio" id="gender_m" name="gender" value="male" required>
+         <label for="gender_m">Male</label>
+		 <input type="radio" id="gender_m" name="gender" value="female" required>
+         <label for="gender_m">Female</label>
+		<br><br>
+
+		 <!-- Car Brands -->
+       <label for="cars">Car Brands:</label>
+       <select id="cars" name="cars" required>
+       <option value="">--Please choose an option--</option>
+       <option value="toyota">Toyota</option>
+       <option value="honda">Honda</option>
+       <option value="ford">Ford</option>
+
+		     <!-- Age -->
+    <label for="age">Age:</label>
+    <input type="number" id="age" name="age" placeholder="Age" required>
+    <br><br>
+
+    <!-- Date of Birth -->
+    <label for="dob">Date of Birth:</label>
+    <input type="date" id="dob" name="dob" required>
+    <br><br>
+
+    <!-- Phone Number -->
+    <label for="tel">Phone Number:</label>
+    <input type="tel" id="tel" name="tel" placeholder="xxx-xxx-xxxx" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+    <br><br>
+
+    <!-- Password -->
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" placeholder="Password" required>
+    <br><br>
+
+    <!-- Terms of Service -->
+    <input type="checkbox" id="tos" name="tos" required>
+    <label for="tos">I agree to the TOS</label>
+    <br><br>
+
+    <!-- Submit Button -->
+    <button type="submit">Submit</button>
+    </select>
+    <br><br>
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
